--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,6 @@
-# Ignore system files
-.DS_Store
-Thumbs.db
-
-# Ignore temporary Jupyter files
+# Ignore only these folders / archives
 .ipynb_checkpoints/
-
-# Ignore dataset folders and Kaggle credentials
 .kaggle/
 data/
-
-# Ignore large or intermediate outputs
 *.zip
-*.pkl
-*.csv
 
-# Ignore Python cache
-__pycache__/
-*.pyc
